<resources>
    <string name="app_name">TicTacToe</string>
    <string name="title_activity_main__menu">TicTacToe</string>
    <string name="human_vs_human">Human Vs Human</string>
    <string name="human_vs_ai">Human Vs AI</string>
    <string name="ai_vs_ai">AI Vs AI</string>
    <string name="exit">Exit</string>
    <string name="cancel">Cancel</string>
    <string name="exit_dialog_msg">Exit Game?</string>
    <string name="choose_symbol_dialog_title">Choose Symbol</string>

    <string name="title_activity_game_play">TicTacToe</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="human">Human</string>
    <string name="ai">AI</string>
    <string name="title_activity_interstitial_ad">InterstitialAdActivity</string>

    <string name="action_settings">Settings</string>

    <string name="interstitial_ad_sample">Interstitial Ad Sample</string>
    <string name="start_level">Level 1</string>
    <string name="next_level">Next Level</string>
    <!-- -
        This is an ad unit ID for an interstitial test ad. Replace with your own interstitial ad unit id.
        For more information, see https://support.google.com/admob/answer/3052638
    <!- -->
    <string name="interstitial_ad_unit_id">ca-app-pub-6852300659518351/3127860226</string>
    <string name="banner_ad_unit_id">ca-app-pub-6852300659518351/2429856220</string>
    <string name="share_with_friends">Share With Friends</string>
</resources>
