<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/fullscreen_content"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#0099cc"
    tools:context="sanjit.tictactoe.GamePlay">

    <TextView
        android:id="@+id/heading"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/app_name"
        android:textColor="@color/colorPrimary"
        android:textSize="50sp" />

    <TextView
        android:id="@+id/Score2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_marginBottom="30dp"
        android:layout_marginEnd="30dp"
        android:layout_marginRight="30dp"
        android:text="000"
        android:textSize="35sp"
        tools:ignore="HardcodedText" />

    <TextView
        android:id="@+id/Score1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginBottom="30dp"
        android:layout_marginLeft="30dp"
        android:layout_marginStart="30dp"
        android:text="000"
        android:textSize="35sp"
        tools:ignore="HardcodedText" />

    <TextView
        android:id="@+id/scoreLabel2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@id/Score2"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_marginEnd="20dp"
        android:layout_marginRight="20dp"
        android:text="@string/ai"
        android:textSize="30sp" />

    <TextView
        android:id="@+id/scoreLabel1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@id/Score1"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginLeft="20dp"
        android:layout_marginStart="20dp"
        android:text="@string/human"
        android:textSize="30sp" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@id/scoreLabel1"
        android:layout_below="@id/heading"
        android:layout_margin="20dp"
        android:gravity="center">

        <sanjit.tictactoe.GameBoard
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fitsSystemWindows="true" />

        <sanjit.tictactoe.GameBoardButtonLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:keepScreenOn="true"
            android:orientation="vertical"
            tools:ignore="HardcodedText">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/game11"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="O"
                    android:textSize="@dimen/gameboardtextsize" />

                <TextView
                    android:id="@+id/game12"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="O"
                    android:textSize="@dimen/gameboardtextsize" />

                <TextView
                    android:id="@+id/game13"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="O"
                    android:textSize="@dimen/gameboardtextsize" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/game21"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="O"
                    android:textSize="@dimen/gameboardtextsize" />

                <TextView
                    android:id="@+id/game22"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="O"
                    android:textSize="@dimen/gameboardtextsize" />

                <TextView
                    android:id="@+id/game23"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="O"
                    android:textSize="@dimen/gameboardtextsize" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/game31"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="O"
                    android:textSize="@dimen/gameboardtextsize" />

                <TextView
                    android:id="@+id/game32"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="O"
                    android:textSize="@dimen/gameboardtextsize" />

                <TextView
                    android:id="@+id/game33"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="O"
                    android:textSize="@dimen/gameboardtextsize" />
            </LinearLayout>
        </sanjit.tictactoe.GameBoardButtonLayout>
    </RelativeLayout>

</RelativeLayout>
